# boost_conan

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
include/: Inventario.hpp
src/: main.cpp
test/: CMakeLists.txt  test.ptree.cpp
